# ShidaoSlicer

./: .gitignore  AGENTFORGE_T03_TASK.md  AGENTFORGE_T06_TASK.md  CMakeLists.txt  CONTRIBUTING.md  Cube_PLA_10x10x10.gcode  Cube_PLA_10x10x10_fixed_double_shear.gcode  Directional_support_tester.step  GLOBAL_CONTEXT.md  Geometrical_directional_support_tester.step  INTEGRATION_STATUS.md  MASTER_PROMPT.md  README.md  RESUME_INSTRUCTION.md  SETUP_HAOS_ON_TAILSCALE.md  SUPPORT_ISSUES_REPORT.md  Supports_Test_small.stl  Supports_Test_small_keel.stl  Test_Supports.3mf  Test_Supports.stl  async_build.sh  bar_20x100x20.stl  belt_filament.json  belt_machine.json  belt_process.json  belt_test_config.ini  belt_test_config.json  belt_transform.ini  build_linux.sh  build_log.txt  calibration-belt-report.md  cli_test_config.json  cli_test_output.txt  debug_crash.sh  gdb_log.txt  gen_bar_20x100x20.py  gen_long_stick.py  get_backtrace.sh  inverted_L.3mf  inverted_L_flip180z.3mf  (+30 more)
.github/: FUNDING.yml  pull_request_template.md
agent-harness/: setup.py
certification_tests/: result.json  test_01_bed_heating.gcode  test_02_hotend_heating.gcode  test_03_both_heaters.gcode  test_04_xy_homing.gcode  test_05_z_movement.gcode  test_06_coordinate_pattern.gcode  test_07_cold_check.gcode  test_08_hot_extrusion.gcode  test_09_move_extrude.gcode  test_10_first_layer_line.gcode  test_10_prime_line_L.gcode  test_11_first_layer_square.gcode  triangle.stl
docs/: BELT_CALIBRATION_STRATEGY.md  BELT_TRANSFORM_WALKTHROUGH.md  HIPPOCAMPUS_20260108.md  INCLINED_SLICING_EXPLAINED.md  T02_Integration_Design.md  behemoth_build_report.md
scripts/: auto_deploy.py  belt_axis_reminder.py  belt_smoke.sh  belt_transform_validator.py  belt_validation_loop.sh  build_watcher.sh  certify_belt_printer.sh  deploy-to-behemoth.sh  (+10 more)
src/orcabelt_fluidd_host/: CMakeLists.txt  main.cpp
tests/mcp_server/: CMakeLists.txt  test_jsonrpc.cpp  test_mcp_protocol.cpp  test_tool_schemas.cpp
(+342 files in other folders)
